--- a/Equidna/Views/Home/Linear.cshtml
+++ b/Equidna/Views/Home/Linear.cshtml
@@ -41,54 +41,68 @@
                     <thead >
                         <tr >
                             <th class="col-xs-2 " >X</th>
-                           
+                            <th class="col-xs-8 "></th>
                             <th class="col-xs-2 " >Y</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="col-xs-6">
+                            <td class="col-xs-2">
                                0
                             </td>
                           
-                            <td class="col-xs-6">
-                                <input type="number" id="x2" name='x1' step="0.01" class="form-control" style="text-align: center"  />
+                            <td class="col-xs-10">
+                                <input type="number" id="x1" name='x1' step="0.01" class="form-control" style="text-align: center"  />
                             </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-6">1</td>
+                            <td class="col-xs-2">0</td>
 
-                            <td class="col-xs-6">23</td>
+                            <td class="col-xs-10">
+                                <input type="number" id="x2" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-6">1</td>
+                            <td class="col-xs-2">0</td>
 
-                            <td class="col-xs-6">23</td>
+                            <td class="col-xs-10">
+                                <input type="number" id="x3" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-6">1</td>
+                            <td class="col-xs-2">0</td>
 
-                            <td class="col-xs-6">23</td>
+                            <td class="col-xs-10">
+                                <input type="number" id="x4" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-6">1</td>
+                            <td class="col-xs-2">0</td>
 
-                            <td class="col-xs-6">23</td>
+                            <td class="col-xs-10">
+                                <input type="number" id="x5" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-6">1</td>
+                            <td class="col-xs-2">0</td>
 
-                            <td class="col-xs-6">23</td>
+                            <td class="col-xs-10">
+                                <input type="number" id="x6" name='x1' step="0.01" class="form-control" style="text-align: center"/>
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-6">1</td>
+                            <td class="col-xs-2">0</td>
 
-                            <td class="col-xs-6">23</td>
+                            <td class="col-xs-10">
+                                <input type="number" id="x7" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-6">1</td>
+                            <td class="col-xs-2">0</td>
 
-                            <td class="col-xs-6">23</td>
+                            <td class="col-xs-10">
+                                <input type="number" id="x8" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
                         </tr>
                         
                     </tbody>
@@ -192,72 +206,71 @@
                 <table class="table table-fixed">
                     <thead>
                         <tr>
-                            <th class="col-xs-2">#</th>
-                            <th class="col-xs-8">Name</th>
-                            <th class="col-xs-2">Points</th>
+                            <th class="col-xs-2 ">X</th>
+                            <th class="col-xs-8 "></th>
+                            <th class="col-xs-2 ">Y</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="col-xs-2">1</td>
-                            <td class="col-xs-8">Mike Adams</td>
-                            <td class="col-xs-2">23</td>
+                            <td class="col-xs-2">
+                                0
+                            </td>
+
+                            <td class="col-xs-10">
+                                <input type="number" id="y1" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">2</td>
-                            <td class="col-xs-8">Holly Galivan</td>
-                            <td class="col-xs-2">44</td>
+                            <td class="col-xs-2">0</td>
+
+                            <td class="col-xs-10">
+                                <input type="number" id="y2" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">3</td>
-                            <td class="col-xs-8">Mary Shea</td>
-                            <td class="col-xs-2">86</td>
+                            <td class="col-xs-2">0</td>
+
+                            <td class="col-xs-10">
+                                <input type="number" id="y3" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">4</td>
-                            <td class="col-xs-8">Jim Adams</td>
-                            <td>23</td>
+                            <td class="col-xs-2">0</td>
+
+                            <td class="col-xs-10">
+                                <input type="number" id="y4" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">5</td>
-                            <td class="col-xs-8">Henry Galivan</td>
-                            <td class="col-xs-2">44</td>
+                            <td class="col-xs-2">0</td>
+
+                            <td class="col-xs-10">
+                                <input type="number" id="y8" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">6</td>
-                            <td class="col-xs-8">Bob Shea</td>
-                            <td class="col-xs-2">26</td>
+                            <td class="col-xs-2">0</td>
+
+                            <td class="col-xs-10">
+                                <input type="number" id="y5" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">7</td>
-                            <td class="col-xs-8">Andy Parks</td>
-                            <td class="col-xs-2">56</td>
+                            <td class="col-xs-2">0</td>
+
+                            <td class="col-xs-10">
+                                <input type="number" id="y6" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
                         </tr>
                         <tr>
-                            <td class="col-xs-2">8</td>
-                            <td class="col-xs-8">Bob Skelly</td>
-                            <td class="col-xs-2">96</td>
+                            <td class="col-xs-2">0</td>
+
+                            <td class="col-xs-10">
+                                <input type="number" id="y7" name='x1' step="0.01" class="form-control" style="text-align: center" />
+                            </td>
                         </tr>
-                        <tr>
-                            <td class="col-xs-2">9</td>
-                            <td class="col-xs-8">William Defoe</td>
-                            <td class="col-xs-2">13</td>
-                        </tr>
-                        <tr>
-                            <td class="col-xs-2">10</td>
-                            <td class="col-xs-8">Will Tripp</td>
-                            <td class="col-xs-2">16</td>
-                        </tr>
-                        <tr>
-                            <td class="col-xs-2">11</td>
-                            <td class="col-xs-8">Bill Champion</td>
-                            <td class="col-xs-2">44</td>
-                        </tr>
-                        <tr>
-                            <td class="col-xs-2">12</td>
-                            <td class="col-xs-8">Lastly Jane</td>
-                            <td class="col-xs-2">6</td>
-                        </tr>
+
                     </tbody>
                 </table>
             </div>
@@ -325,9 +338,21 @@
     var numtable = document.getElementById("table1");
     var numtable2 = document.getElementById("table2");
     var tablax1 = document.getElementById("x1");
-    var tablay1 = document.getElementById("y2");
     var tablax2 = document.getElementById("x2");
-    var tablay2 = document.getElementById("y1");
+    var tablax3 = document.getElementById("x3");
+    var tablax4 = document.getElementById("x4");
+    var tablax5 = document.getElementById("x5");
+    var tablax6 = document.getElementById("x6");
+    var tablax7 = document.getElementById("x7");
+    var tablax8 = document.getElementById("x8");
+    var tablay1 = document.getElementById("y1");
+    var tablay2 = document.getElementById("y2");
+    var tablay3 = document.getElementById("y3");
+    var tablay4 = document.getElementById("y4");
+    var tablay5 = document.getElementById("y5");
+    var tablay6 = document.getElementById("y6");
+    var tablay7 = document.getElementById("y7");
+    var tablay8 = document.getElementById("y8");
     var xxx =0;
     var firstUpdate = true;
     var addrow = document.getElementById("add_row");
@@ -335,11 +360,12 @@
     var value;
     var Formulapos = document.getElementById("Formuposi");
     var Formulavelo = document.getElementById("Formuvelo");
+    var check = true;
+    var pintarotrosPuntos;
+    var pintarPuntos;
     
     
-    function add(parameters) {
-
-    }
+    
 
     function updateFromNumber() {
         if (firstUpdate) {
@@ -398,13 +424,19 @@
     var FormulaDiv = document.getElementById("FormulaDisplayDiv");
 
 
-    var positionBoard = JXG.JSXGraph.initBoard('PositionBoard', { boundingbox: [-2, 9, 9, -2], axis: true, grid: true, shownavigation: true, keepAspectRatio: true, showClearTraces:true });
-    positionBoard.create('text', [0.5, 8, "(m)"]);
-    positionBoard.create('text', [8, 0.5, "tiempo()"]);
+    var positionBoard = JXG.JSXGraph.initBoard('PositionBoard',
+    {
+        boundingbox: [-2, 9, 9, -2],
+        axis: true,
+        grid: true,
+        shownavigation: true,
+        keepAspectRatio: true,
+        showClearTraces: true,
+        keepaspectratio:false });
+  
 
-    var velocityBoard = JXG.JSXGraph.initBoard('VelocityBoard', { boundingbox: [-2, 9, 9, -2], axis: true, grid: true, shownavigation: true, keepAspectRatio: true, showClearTraces: true });
-    velocityBoard.create('text', [0.5, 8, "(m/s)"]);
-    velocityBoard.create('text', [8, 0.5, "tiempo()"]);
+    var velocityBoard = JXG.JSXGraph.initBoard('VelocityBoard', { boundingbox: [-2, 9, 9, -2], axis: true, grid: true, shownavigation: true, keepAspectRatio: true, showClearTraces: true, keepaspectratio :false});
+    
 
 
     var sliderBox = JXG.JSXGraph.initBoard('sliderBox', { boundingbox: [-(minY * (maxX - minX)), 5, minY * (maxX - minX), -5], axis: false,grid: true, shownavigation: true, showCopyright: false, keepAspectRatio: true });
@@ -440,36 +472,51 @@
     linearPoint = positionBoard.create('point', [0, 0], { size: 2, name: "", color: "Blue" });
     linearPoint.on(
         'drag',
-        function () { linearPoint.moveTo([0, linearPoint.Y()]) }
+        function() {
+            linearPoint.moveTo([0, linearPoint.Y()]);
+
+            
+        }
     );
 
     constantPoint = velocityBoard.create('point', [0, positionFunction.a], { size: 2, name: "", color: "Red" });
     constantPoint.on(
         'drag',
-        function () { constantPoint.moveTo([0, constantPoint.Y()]) }
+        function() {
+            constantPoint.moveTo([0, constantPoint.Y()]);
+         
+        }
     );
 
     function updateFunction() {
 
         velocityFunction.a = constantPoint.Y();
         positionFunction = velocityFunction.integrate(linearPoint.Y());
+
+        positionBoard.removeObject(pintarPuntos);
+        positionBoard.removeObject(pintarotrosPuntos);
+        //velocityBoard.removeObject(pintarPuntos);
+        //velocityBoard.removeObject(pintarotrosPuntos);
         //form
-        //updateform();
+
+        updateform();
         //form2
-        //updateform2();
+        updateform2();
         //input
         updatenumerfield();
         //table
        // updatetablenum();
         //text html
         updateformhtml();
-        positionBoard.update();
+        //positionBoard.update();
+        //velocityBoard.update();
     }
-
+    
+   
 
     function updatenumerfield() {
-        numberField2.value = velocityFunction.a;
-        numberField.value = positionFunction.b;
+        numberField2.value = positionFunction.a;
+        numberField.value =positionFunction.b;
         numberField2.value = Math.round(numberField2.value * 100) / 100;
         numberField.value = Math.round(numberField.value * 100) / 100;
     }
@@ -479,31 +526,46 @@
         numtable2.value = positionFunction.b;
         numtable.value = Math.round(numtable.value * 100) / 100;
         numtable2.value = Math.round(numtable2.value * 100) / 100;
-    }
+    }*/
     function updateform(parameters) {
-
-        tablay1.value = parseFloat(numtable2.value) + parseFloat(numtable.value * tablax1.value);
-        positionBoard.create('point', [tablax1.value, tablay1.value], { size: 2, name: "", color: "Red" });
-        tablay1.value = null;
-        tablax1.value = null;
+        var  otronum =0.00;
+        otronum = parseFloat(numberField.value) + parseFloat(numberField2.value * tablax1.value);
+        pintarPuntos = positionBoard.create('point', [tablax1.value, otronum], { size: 2, name: "", color: "Red", trace: true });
+    
+        //velocityBoard.addChild(positionBoard);
 
     }
     function updateform2(parameters) {
+
+        var otro2 = 0.00;
+        otro2 = ((parseFloat(tablay1.value) - parseFloat(numberField.value)) / parseFloat(numberField2.value));
+        pintarotrosPuntos = positionBoard.create('point', [otro2, tablay1.value], { size: 2, name: "", color: "Red", trace: true });
+        //velocityBoard.addChild(positionBoard);
+
+    }
+
+    function checar(parameters) {
+        // board.clearTraces(pintarPuntos);
+        
+       
+        pintarPuntos.setAttribute({ visible: false });
+        pintarotrosPuntos.setAttribute({ visible: false });
       
 
-        tablax2.value = ((parseFloat(tablay2.value) - parseFloat(numtable2.value)) / parseFloat(numtable.value));
-        var posi = positionBoard.create('point', [tablax2.value, tablay2.value], { size: 2, name: "", color: "Red" });
-        tablay2.value = null;
-        tablax2.value = null;
-        // posi.visible(false);
-    }*/
+        // tablax1.value = " ";
+        //tablay1.value = " ";
 
+
+    }
     function updateformhtml(parameters) {
         FormulaDiv.innerHTML = positionFunction.ToString();
         Formulavelo.innerHTML = "X:0    Y:" + numberField2.value;
         Formulapos.innerHTML = "X:0     Y:" + numberField.value;
     }
-    updateFunction();
+   
     positionBoard.on('update', updateFunction);
     velocityBoard.on('update', updateFunction);
+    positionBoard.on('update', checar);
+    velocityBoard.on('update', checar);
+    updateFunction();
 </script>
